# Smart-Restaurant-WhatsApp-AI-Agent

./: .env.example  .gitignore  README.md  documentation.html  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  clock.py  config.py  deps.py  logging_conf.py  main.py
app/agent/: __init__.py  graph.py  state.py
app/agent/nodes/: __init__.py  intent.py  plan.py  reflect.py  respond.py  tools.py
app/api/: __init__.py  health.py  local_chat.py
app/providers/: __init__.py  base.py  channel_local.py  embeddings.py  llm_anthropic.py  llm_gemini.py  llm_mock.py  psp_mock.py  stt.py  vector_memory.py  vision.py
app/repositories/: __init__.py  base.py  memory.py
app/schemas/: __init__.py  domain.py  entities.py  enums.py  messaging.py
app/security/: __init__.py  injection.py  pii.py
app/seed/: __init__.py  demo_menu.json  seed_demo.py
app/services/: __init__.py  pipeline.py  response.py  telemetry.py  text.py
app/tools/: __init__.py  base.py  cart.py  escalation.py  menu_rag.py  payments.py  recommender.py  reservations.py  tracking.py
scripts/: smoke.py
tests/: conftest.py  test_domain.py  test_pipeline.py  test_text.py
web/: chat.html
